[gd_scene load_steps=2 format=3 uid="uid://d3gq3g3g3g3g3"]

[ext_resource type="Script" path="res://scripts/Configuration.gd" id="1_fghij"]

[node name="Configuration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fghij")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.0001
max_value = 1.0
step = 0.01
value = 1.0

[node name="SfxLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.0001
max_value = 1.0
step = 0.01
value = 1.0
